Fix list alignment on desktop.

--- a/src/styles.css
+++ b/src/styles.css
@@ -455,6 +455,7 @@ section h2 {
   .list .page-content {
     display: flex;
     flex-flow: wrap;
+    align-content: baseline;
   }
 
   .list .game-preview {
